[package]
name = "tiger-spacetraders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
eyre = "0.6.8"
reqwest = "0.11.17"
spacetraders-sdk = { path = "spacetraders-sdk" }
tokio = { version = "1.28.0", features = ["full"] }
tui = "0.19.0"
